// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check Switcher spanpshot collection is Switcher render right if value set True and False? 1`] = `
<span>
  <div
    class="switcher-wrapper active"
  >
    <div
      class="switcher-handle"
    />
  </div>
  <span
    class="switcher-label"
  >
    Switch
  </span>
</span>
`;

exports[`Check Switcher spanpshot collection is Switcher render right if value set True and False? 2`] = `
<span>
  <div
    class="switcher-wrapper"
  >
    <div
      class="switcher-handle"
    />
  </div>
  <span
    class="switcher-label"
  >
    Switch
  </span>
</span>
`;

exports[`Check Switcher spanpshot collection is Switcher render right? 1`] = `
<span>
  <div
    class="switcher-wrapper"
  >
    <div
      class="switcher-handle"
    />
  </div>
  <span
    class="switcher-label"
  >
    Switch
  </span>
</span>
`;
